<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">柠檬街</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_cart">购物车</string>
    <string name="title_category">分类</string>
    <string name="title_index">爱逛</string>
    <string name="title_stars">搜货</string>
    <string name="title_my">我的</string>
    <string name="title_activity_tabao">TabaoActivity</string>
    <string name="todo">TODO</string>
    <string name="user_work_back">返回</string>
    <string name="my_tb">我的淘宝</string>
    <string name="tab_1">新款</string>
    <string name="tab_2">换季</string>
    <string name="tab_3">精选</string>
    <string name="tab_4">施华蔻</string>
    <string name="tab_5">美奇丝</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="pwd_set">设置密码</string>
    <string name="secret_info">已同意使用隐私条款政策</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="register">注册新用户</string>
    <string name="click_get">点击获取</string>
      <string name="total_customer">合计消费</string>
    <string name="kernel">麦粒</string>
    <string name="can_use">可用</string>
    <string name="used">使用</string>
    <string name="balance">余额</string>
    <string name="need_to_pay">还需支付</string>
    <string name="pay_type_select">选择支付方法</string>
    <string name="pay_type">支付方式</string>
    <string name="pay_type_detail">支付方式明细</string>
    <string name="set">设置</string>
    <string name="loading">加载中&#8230;</string>
    <string name="user_hint">请输入您的用户名</string>
    <string name="pwd_hint">请输入您的密码</string>
    <string name="pwd_forget">忘记密码</string>
    <string name="register">注册新用户</string>
    <string name="click_get">点击获取</string>
    <string name="get_at_once">立即领取</string>
    <string name="lanzhou">兰州</string>
    <string name="login">登录</string>
    <string name="name_hint">请输入姓名</string>
    <string name="invitecode_hint">请输入邀请码</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="smscode_hint">请输入短信验证码</string>
    <string name="pwd_set">设置密码</string>
    <string name="secret_info">已同意使用隐私条款政策</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="check_out">清单结帐</string>
    <string name="offer_main">优惠</string>
    <string name="test">这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据这是一段测试数据</string>
    <string name="food">美食</string>
    <string name="film">电影</string>
    <string name="hotel">酒店</string>
    <string name="ktv">ktv</string>
    <string name="beauty">丽人</string>
    <string name="server">服务</string>
    <string name="nearby">附近</string>
    <string name="travel">旅游</string>
    <string name="type">分类</string>
    <string name="area">区域</string>
    <string name="district">商圈</string>
    <string name="sort">排序</string>
    <string name="ticket">优惠券</string>
    <string name="invest">投资</string>
    <string name="profit">收益：</string>
    <string name="offer">优惠</string>
    <string name="raise">众筹</string>
    <string name="news">动态</string>
    <string name="more">更多</string>
    <string name="mine">我的</string>
    <string name="voucher_manage">优惠券管理</string>
    <string name="discount_manage">折扣券管理</string>
    <string name="discount">折扣</string>
    <string name="share_holder">微股东</string>
    <string name="discount_ticket">优惠券</string>
    <string name="my_collect">我的收藏</string>
    <string name="shop_area">商家位置</string>
    <string name="purchase_notes">购买须知</string>
    <string name="consume_count">消费金额</string>
    <string name="pay_count">应付金额</string>
    <string name="target_name">标的名称</string>
    <string name="pay_at_once">立即买单</string>
    <string name="order_name">套餐名称</string>
    <string name="order_intro">套餐介绍</string>
    <string name="orient_price">原价</string>
    <string name="discount_price">优惠价</string>
    <string name="join_in_list">加入清单</string>
    <string name="count">数量</string>
    <string name="price">价格</string>
    <string name="subtotal">小计</string>
    <string name="date">日期</string>
    <string name="order">订单</string>
    <string name="order_pay">订单支付</string>
    <string name="msg">信息</string>
    <string name="wallet">钱包</string>
    <string name="collect">收藏</string>
    <string name="raise_recorder">众筹记录</string>
    <string name="appraise_name">评价</string>
    <string name="shop_area_name">××商店（××分店）</string>
    <string name="shop_area_test">××省××市××区××大道××号\n电话：××××-××××××××</string>
    <string name="username">用户名\n账户余额:×××元</string>
    <string name="msg_notice">消息提醒</string>
    <string name="no_pic_mode">"2G\/3G下使用无图模式"</string>
    <string name="font_size">字号大小</string>
    <string name="cache_clear">清空缓存</string>
    <string name="other">其他</string>
    <string name="update_check">检查更新</string>
    <string name="version">当前版本V1.0</string>
    <string name="about_wheat">关于小麦</string>
    <string name="offer_count">5.7折</string>
    <string name="testnum">13900000000</string>
    <string name="profit_count">30%</string>
    <string name="zero">0</string>
    <string name="title_activity_wheat_main">WheatMain</string>
    <string name="hello_world">测试数据</string>
    <string name="offer_info">优惠详情</string>
    <string name="raise_info">众筹详情</string>
    <string name="notice">通知:</string>
    <string name="return_at_once">随时退</string>
    <string name="saled">已售×××</string>
    <string name="stage">本店前台</string>
    <string name="total">总计</string>
    <string name="phonenum_binded">您绑定的手机号</string>
    <string name="bind_newnum">绑定新的手机号</string>
    <string name="discount_by_phone">手机结帐立减</string>
    <string name="title_activity_raise_main">RaiseMain</string>
    <string name="title_activity_news_main">NewsMain</string>
    <string name="title_activity_offer_detail">OfferDetail</string>
    <string name="title_activity_raise_detail">RaiseDetail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_offer_pay">OfferPay</string>
    <string name="title_activity_mine_my_collect">MineMyCollect</string>
    <string name="title_activity_order_pay">OrderPay</string>
    <string name="title_activity_more_about">MoreAbout</string>
    <string name="user_agreement">用户协议</string>
    <string name="service_phone">"客服电话：400\-242\-168"</string>
    <string name="title_activity_more_user_agreement">MoreUserAgreement</string>
    <string name="wheat_user_agreement">小麦网用户协议</string>
    <string name="daily_mention">每日推荐提醒</string>
    <string name="mention_time">提醒时间</string>
    <string name="promotion_notice">活动相关通知</string>
    <string name="title_activity_more_msg">MoreMsg</string>

</resources>
