<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="120dip"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:paddingBottom="12dp"
        android:paddingTop="48dp"
        android:scaleType="center"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/login_input_area"
        android:layout_width="fill_parent"
        android:layout_height="112dp"
        android:layout_below="@id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@android:color/black" >

        <RelativeLayout
            android:id="@+id/login_input_area_layout1"
            android:layout_width="fill_parent"
            android:layout_height="55dp" >

            <ImageView
                android:id="@+id/login_usericon"
                android:layout_width="55dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/login_user" />

            <EditText
                android:id="@+id/login_userinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/login_usericon"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/user_hint"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/login_divider"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/login_input_area_layout1"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/login_input_area_layout2"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/login_divider"
            android:layout_marginTop="1dp" >

            <ImageView
                android:id="@+id/login_pwdicon"
                android:layout_width="55dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/login_pwdinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/login_pwdicon"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/login_forgetpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_input_area"
        android:layout_marginRight="6dp"
        android:paddingTop="10dp"
        android:text="@string/pwd_forget"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/login_or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/or" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dip" />

    <RelativeLayout
        android:id="@+id/login_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
         >

        <ImageView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/login_user" />

        <TextView
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dip"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dip"
        android:textSize="20sp" />

</RelativeLayout>