<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/android_layout_bg" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

       <RadioGroup
            android:id="@+id/home_radio_button_group"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_tab_main"
                style="@style/home_tab_bottom"
                android:text="商家"
                android:checked="true"
                android:drawableTop="@drawable/index_indicator_bg" />

              <RadioButton
                android:id="@+id/home_tab_category"
                style="@style/home_tab_bottom"
                android:text="@string/title_category"
                android:drawableTop="@drawable/category_indicator_bg" />
            <RadioButton
                android:id="@+id/home_tab_search"
                style="@style/home_tab_bottom"
                android:text="发现"
                android:drawableTop="@drawable/stars_indicator_bg" />

            <RadioButton
                android:id="@+id/home_tab_shopping_car"
                style="@style/home_tab_bottom"
                android:text="购物车"               
                android:drawableTop="@drawable/my_shopcar_bg" />
            
            <RadioButton
                android:id="@+id/home_tab_personal"
                style="@style/home_tab_bottom"
                android:text="@string/title_my"               
                android:drawableTop="@drawable/my_indicator_bg" />
        </RadioGroup>
    </LinearLayout>
    
    <ImageView
        android:id="@+id/iv_splash_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:background="@drawable/ba"
        android:visibility="gone" />

</TabHost>