<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:paddingBottom="12dp"
        android:paddingTop="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/register_input_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@android:color/black" >

        <RelativeLayout
            android:id="@+id/register_input_area_layout1"
            android:layout_width="fill_parent"
            android:layout_height="42dp" >

            <ImageView
                android:id="@+id/register_name"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/name" />

            <EditText
                android:id="@+id/register_nameinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/register_name"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入姓名"
                android:inputType="text"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/register_divider1"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_input_area_layout1"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/register_input_area_layout2"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_below="@id/register_divider1"
            android:layout_marginTop="1dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/register_invitecode"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/code" />

            <EditText
                android:id="@+id/register_inviteinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/register_invitecode"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入邀请码"
                android:inputType="number"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/register_divider2"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_input_area_layout2"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/register_input_area_layout3"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_below="@id/register_divider2"
            android:layout_marginTop="1dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/register_phone"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/register_phoneinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/register_phone"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入手机号"
                android:inputType="number"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/register_divider3"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_input_area_layout3"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/register_input_area_layout4"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_below="@id/register_divider3"
            android:layout_marginTop="1dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/register_mailicon"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/mail" />

            <Button
                android:id="@+id/register_smsbtn"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:text="点击获取"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/register_smsinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@id/register_smsbtn"
                android:layout_toRightOf="@id/register_mailicon"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入短信验证码"
                android:inputType="number"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/register_divider4"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_input_area_layout4"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/register_input_area_layout5"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_below="@id/register_divider4"
            android:layout_marginTop="1dp" >

            <ImageView
                android:id="@+id/register_pwd"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/register_pwdinput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/register_pwd"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_set"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <View
            android:id="@+id/register_divider5"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_input_area_layout5"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:id="@+id/register_input_area_layout6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/register_divider5"
            android:layout_marginTop="1dp"
            android:visibility="gone"  >

            <EditText
                android:id="@+id/register_pwdconfirm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="42dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_confirm"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/register_secret_checkbox"
        style="@style/MyCheckBox"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/register_input_area"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_alignBottom="@id/register_secret_checkbox"
        android:layout_toRightOf="@id/register_secret_checkbox"
        android:gravity="center_vertical"
        android:text="@string/secret_info"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/register_secret_checkbox"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_shape"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/register_or"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/or" />

    <TextView
        android:id="@+id/register_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_or"
        android:gravity="center_horizontal"
        android:paddingTop="4dp"
        android:text="@string/login"
        android:textColor="#008000" />

</RelativeLayout>